<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/dialog_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_alignParentTop="true"
        android:layout_above="@id/footer"
        android:id="@+id/indexScrollGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:paddingTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:id="@+id/supportPageTitle"
                    android:textSize="30sp"
                    android:layout_weight="1"
                    tools:text="This a title! it cab supera long too"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:layout_marginStart="8dp"
                    android:id="@+id/faqImage"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_frequently_asked_questions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:id="@+id/supportPageDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textColor="#000000"
                android:textSize="17sp"
                tools:text="This is a long description! Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <FrameLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/fragment_support_footer" />
    </FrameLayout>
</RelativeLayout>